syntax = "proto2";

package packages.examples.echo;

message StreamEchoRequest { optional string pattern = 1; }

message StreamEchoResponse {
  required string message = 1;
  required int64 timestamp = 2;
}
